media/Plex/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: linuxserver/plex:arm64v8-latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
         - containerPort: 32400
           protocol: TCP
         - containerPort: 1900
           protocol: UDP
         - containerPort: 3005
           protocol: TCP
         - containerPort: 5353
           protocol: UDP
         - containerPort: 8324
           protocol: TCP
         - containerPort: 32410
           protocol: UDP
         - containerPort: 32412
           protocol: UDP
         - containerPort: 32413
           protocol: UDP
         - containerPort: 32414
           protocol: UDP
         - containerPort: 32469
           protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: plex-config
          - mountPath: /tv
            name: tv
          - mountPath: /movies
            name: movies
      volumes:
        - name: plex-config
          hostPath:
            path: /media/config/nzbhydra2
        - name: tv
          hostPath:
            path: /media/media/tv
        - name: movies
          hostPath:
            path: /media/media/movies
