media/Plex/ingressRoute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: media
  labels:
    name: plex
spec:
  entryPoints: 
    - web
    - websecure
  routes:
    - match: Host(\`plexk3.smrtrock.com\`)
      kind: Rule
      services:
        - name: plex
  # Use the secret generated by cert-manager
  tls:
    secretName: traefik-cert-secret
